--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
 	<img src="img/go-logo-icon.png" alt="" class="img-responsive">
       </div>
     </div>
-    <p><a class="btn btn-primary btn-lg" href="{{ "/docs/home/" | prepend: site.baseurl }}" role="button">Learn more</a></p>
+    <p><a class="btn btn-primary btn-lg" href="{{ "/docs/introduction-to-go-resource/" | prepend: site.baseurl }}" role="button">Learn more</a></p>
   </div>
 </div>
 
