--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="header-container jumbotron">
-	<div class="container" style="width: 95%;">
+	<div class="container" style="width: 90%;">
 		<h1 class="site__title">The Gene Ontology Resource</h1>
 
 		<div class="row">
@@ -64,20 +64,22 @@ layout: default
 				<div class="hidden-xs hidden-sm">
 					<img src="img/go-logo-icon.png" alt="Gene Ontology Logo" class="img-responsive go-main-logo" style="margin: auto;">
 				</div>
-				<div style="text-shadow: 1px 1px 9px black;
-						border: 1px solid black;
-						border-radius: 25px;
-						padding: 20px;
-						padding-top: 0px;
-						margin-top: 20px;
-						background: linear-gradient(rgba(0, 0, 100, 0.5), rgba(255, 255, 255, 0.5));
-						box-shadow: 1px 1px 10px black;">
-					<h3>Current Release</h3>
-					# GO terms: 45 000
-					<br>
-					# GO annotations: 7 000 000
-					<br>
-					# Species: 3 200
+				<div style="
+				text-shadow: 1px 1px 9px black;
+				/* border: 1px solid black; */
+				border-radius: 35px 10px 35px 10px;
+				padding: 20px;
+				padding-top: 1px;
+				margin-top: 20px;
+				background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(0, 0, 100, 0.5));
+				box-shadow: 1px 1px 10px black;
+				font-size: 12px;				
+				">
+
+					<h3 style="font-size: 20px;margin-bottom: 0px;"><a href="/docs/downloads/" style="color: white;">Current Release</a></h3>
+					<li>45 042 GO terms</li>
+					<li>6 278 639 annotations</li>
+					<li>3 200 species</li>
 				</div>
 			</div>
 
@@ -91,7 +93,7 @@ layout: default
 </div>
 
 
-<div class="container">
+<div class="container" style="width: 90%;">
 
 	<div class="row">
 
@@ -233,9 +235,9 @@ layout: default
 		</div>
 
 		<!-- MIDDLE PANEL -->
-		<div class="col-md-4">
+		<div class="col-md-8">
 			<blockquote>
-				"Unifying Biology."
+				GO: a shared vocabulary of biology across species
 			</blockquote>
 
 			<p>
@@ -245,21 +247,21 @@ layout: default
 			</p>
 
 			<p>
-				The GO knowledgebase is composed of two primary components:
-			</p>
-		</div>
-
-		<!-- RIGHT PANEL -->
-		<div class="col-md-4">
-
-			<h3 style="display: block; margin-left: auto; margin-right: auto;">Current statistics</h5>
+					Together, the ontology and annotations aim to describe a comprehensive model of biological systems. Currently, the GO knowledgebase
+					includes experimental findings from almost 140 000 published papers, represented as over 600 000 experimentally-supported
+					GO annotations. These provide the core dataset for additional inference of over 6 million functional annotations for
+					a diverse set of organisms spanning the tree of life.
+				</p>
+	
 				<p>
-					<a href="http://amigo.geneontology.org/amigo/base_statistics" alt="Statistics link" title="View current GO statistics." class="basic-link" target="blank">
-						<img class="img-responsive" src="https://s3.amazonaws.com/go-public/static/ann-land.png">
-					</a>
+					In addition to this core knowledgebase, GO resources also include software to edit and perform logical reasoning over the
+					ontologies, web access to the ontology and annotations, and analytical tools that use the GO knowledgebase to support
+					biomedical research.
 				</p>
 
+				<p>The GO Knowledgebase is composed of two primary components:</p>
 		</div>
+
 	</div>
 
 	<hr>
@@ -267,48 +269,40 @@ layout: default
 	<div class="row">
 		<div class="col-sm-6">
 			<h1 class="text-center">
-				<i class="fa fa-code-fork" aria-hidden="true"></i>
+				<i class="fa fa-share-alt" aria-hidden="true"></i>
 			</h1>
 			<h3 class="text-center">Ontology</h3>
 			<p>
 				The ontology provides the logical structure of the biological functions (‘terms’) and their relationships to one another,
 				manifested as a directed graph of terms and relations.
 			</p>
-			<p>
-				<a class="btn btn-secondary" href="/docs/downloads/" role="button">Our ontology data »</a>
+			<p style="text-align: center;">
+				<a class="btn u-background-gradient-secondary btn-lg" href="/docs/downloads/"
+					role="button" style="font-size: 18px; margin: 5px">
+	 		    <i class="fa fa-share-alt"></i> Our ontology data »</a>		
+				<!-- <a class="btn btn-secondary" href="/docs/downloads/" role="button">Our ontology data »</a> -->
 			</p>
 		</div>
 		<div class="col-sm-6">
 			<h1 class="text-center">
-				<i class="fa fa-pencil" aria-hidden="true"></i>
+				<i class="fa fa-clone" aria-hidden="true"></i>
 			</h1>
 			<h3 class="text-center">Annotations</h3>
 			<p>
 				The corpus of GO annotations, evidence-based statements relating a specific gene product (a protein, non-coding RNA, or macromolecular
 				complex, which we refer to hereafter as ‘genes’ for simplicity) to a specific ontology term
 			</p>
-			<p>
-				<a class="btn btn-secondary" href="http://current.geneontology.org/products/pages/downloads.html" role="button">Our annotation data »</a>
+			<p style="text-align: center;">
+				<a class="btn u-background-gradient-tertiary btn-lg" href="http://current.geneontology.org/products/pages/downloads.html" target="blank"
+					role="button" style="font-size: 18px; margin: 5px">
+			    <i class="fa fa-clone"></i> Our annotation data »</a>
+		
+
+				<!-- <a class="btn btn-secondary" href="http://current.geneontology.org/products/pages/downloads.html" role="button">Our annotation data »</a> -->
 			</p>
 		</div>
 	</div>
 
+	<br><br><br>
 	<hr>
 
-	<div class="row">
-		<div class="col-md-12">
-			<p>
-				Together, the ontology and annotations aim to describe a comprehensive model of biological systems. Currently, the GO knowledgebase
-				includes experimental findings from almost 140 000 published papers, represented as over 600 000 experimentally-supported
-				GO annotations. These provide the core dataset for additional inference of over 6 million functional annotations for
-				a diverse set of organisms spanning the tree of life.
-			</p>
-
-			<p>
-				In addition to this core knowledgebase, GO resources also include software to edit and perform logical reasoning over the
-				ontologies, web access to the ontology and annotations, and analytical tools that use the GO knowledgebase to support
-				biomedical research.
-			</p>
-		</div>
-
-	</div>
