--- a/index.html
+++ b/index.html
@@ -259,13 +259,12 @@ layout: default
 					biomedical research.
 				</p>
 
-				<p>The GO Knowledgebase is composed of two primary components:</p>
+				<p>The GO knowledgebase is composed of two primary components: <a href="/docs/ontology-documentation/">GO ontology</a> and <a href="/docs/go-annotations/">GO annotations</a>.</p>
 		</div>
 
 	</div>
 
-	<hr>
-
+<!-- 
 	<div class="row">
 		<div class="col-sm-6">
 			<h1 class="text-center">
@@ -280,7 +279,6 @@ layout: default
 				<a class="btn u-background-gradient-secondary btn-lg" href="/docs/downloads/"
 					role="button" style="font-size: 18px; margin: 5px">
 	 		    <i class="fa fa-share-alt"></i> Our ontology data »</a>		
-				<!-- <a class="btn btn-secondary" href="/docs/downloads/" role="button">Our ontology data »</a> -->
 			</p>
 		</div>
 		<div class="col-sm-6">
@@ -298,10 +296,9 @@ layout: default
 			    <i class="fa fa-clone"></i> Our annotation data »</a>
 		
 
-				<!-- <a class="btn btn-secondary" href="http://current.geneontology.org/products/pages/downloads.html" role="button">Our annotation data »</a> -->
 			</p>
 		</div>
-	</div>
+	</div> -->
 
 	<br><br><br>
 	<hr>
