--- a/index.html
+++ b/index.html
@@ -65,18 +65,15 @@ layout: default
 					<img src="img/go-logo-icon.png" alt="Gene Ontology Logo" class="img-responsive go-main-logo" style="margin: auto;">
 				</div>
 				<div style="
-				text-shadow: 1px 1px 9px black;
-				/* border: 1px solid black; */
 				border-radius: 35px 10px 35px 10px;
 				padding: 20px;
 				padding-top: 1px;
 				margin-top: 20px;
-				background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(0, 0, 100, 0.5));
-				box-shadow: 1px 1px 10px black;
-				font-size: 12px;				
+				font-size: 16px;
+				color: black;				
 				">
 
-					<h3 style="font-size: 20px;margin-bottom: 0px;"><a href="/docs/downloads/" style="color: white;">Current Release</a></h3>
+					<h3 style="font-size: 25px;margin-bottom: 0px;"><a href="/docs/downloads/">Current Release</a></h3>
 					<li>45 042 GO terms</li>
 					<li>6 278 639 annotations</li>
 					<li>3 200 species</li>
