Some CSS adjustments

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 layout: default 
 ---
 
-<div class="header-container jumbotron">
+<div class="header-container jumbotron" style="    padding-bottom: 0px;">
 	<div class="container" style="width: 90%;">
-		<h1 class="site__title">The Gene Ontology Resource</h1>
+		<h1 class="site__title" style="font-size: 45px">The Gene Ontology Resource</h1>
 
 		<div class="row">
 
 			<div class="col-md-9">
 
-				<p class="site__statement">
-					The mission of the GO Consortium is to develop an up-to-date, comprehensive,
+				<p class="site__statement" style="font-size: 20px">
+					The mission of the GO Consortium is to develop a comprehensive,
 					<b>computational model of biological systems</b>, from the molecular level to larger pathways, cellular and organism-level
 					systems.
 				</p>
@@ -46,7 +46,7 @@ layout: default
 						<div class="center-block" style="padding-bottom: 1em;">
 							<div class="input-group">
 								<input id="gsf-query" class="form-control input-lg go-search-bar" style="width: 100%; border-radius:25px 0px 0px 25px;" 
-										name="q" placeholder="Search GO term or Gene Product..."
+										name="q" placeholder="Search GO term or Gene Product in AmiGO ..."
 								 		title="Hint: add a space after completing a word to narrow the search." type="text">
 								<span class="input-group-btn">
 									<button class="btn btn-primary u-no-transform go-search-bar" type="submit" 
