Just adding the link to GO enrichment on the main page

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ layout: default
 		<!-- LEFT PANEL -->
 		<div class="col-md-4">
 
-			<h3 class="display: block; margin-left: auto; margin-right: auto;">Enrichment analysis</h5>
+			<h3 class="display: block; margin-left: auto; margin-right: auto;"><a href="/docs/go-enrichment-analysis/">GO Enrichment Analysis</a></h5>
 
 				<form action="http://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST">
 					<input name="correction" value="bonferroni" type="hidden">
