--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ layout: default
 				<br>
 
 				<p>
-					<form action="http://amigo.geneontology.org/amigo/medial_search" class="" method="GET">
+					<form action="http://amigo.geneontology.org/amigo/medial_search" class="" method="GET" target="_blank">
 						<div class="center-block" style="padding-bottom: 1em;">
 							<div class="input-group">
 								<input id="gsf-query" class="form-control input-lg go-search-bar" style="width: 100%; border-radius:25px 0px 0px 25px;height: 50px;" name="q"
