also enrichment new tab

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ layout: default
 				<a href="/docs/go-enrichment-analysis/">GO Enrichment Analysis <i class="fa fa-question-circle"></i></a>
 				</h5>
 
-				<form action="http://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST">
+				<form action="http://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank">
 					<input name="correction" value="bonferroni" type="hidden">
 					<input name="format" value="html" type="hidden">
 					<input name="resource" value="PANTHER" type="hidden">
