--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
---- 
-layout: default 
+---
+layout: default
 ---
 
 <div class="header-container jumbotron" style="
@@ -20,10 +20,10 @@ margin-top: -70px !important;
 					transform: translateY(-25px);
 					transform: translate(50px, -25px);
 					/* background-color: white; */
-					text-shadow: 1px 1px black;"><b>Current release</b>: 2018-10-01 | 45 042 GO terms | 6 278 639 annotations | 3 200 species</p>
-		
+					text-shadow: 1px 1px black;">Current release—<b>2018-10-01</b>: 45,042 GO terms | 6,278,639 annotations | 3,200 species</p>
 
-		<h1 class="site__title" style="    
+
+		<h1 class="site__title" style="
 			font-size: 45px;
 			letter-spacing: 0.35rem;
 			text-transform: uppercase;
@@ -34,7 +34,7 @@ margin-top: -70px !important;
 			<div class="col-md-8">
 
 				<p class="site__statement" style="font-size: 20px; max-width: 900px">
-					The mission of the GO Consortium is to develop a comprehensive, <b></b>computational model of biological systems</b>, covering pathways from the molecular to the organism level, across the multiplicity of species in the tree of life.
+					The mission of the GO Consortium is to develop a comprehensive, <b>computational model of biological systems</b>, ranging from the molecular to the organism level, across the multiplicity of species in the tree of life.
 				</p>
 
 				<!-- style="text-align: center;" -->
@@ -75,9 +75,9 @@ margin-top: -70px !important;
 								</span>
 							</div>
 							<div style="color:white; margin-top: 5px; margin-left:10px; font-size: 18px">
-								<input type="radio" name="searchtype" value="all" checked="checked"> Any &nbsp;														
+								<input type="radio" name="searchtype" value="all" checked="checked"> Any &nbsp;
 								<input type="radio" name="searchtype" value="ontology"> Ontology &nbsp;
-								<input type="radio" name="searchtype" value="geneproduct"> Gene Product 
+								<input type="radio" name="searchtype" value="geneproduct"> Gene Product
 							</div>
 						</div>
 					</form>
@@ -89,13 +89,13 @@ margin-top: -70px !important;
 					<h3 class="display: block; margin-left: auto; margin-right: auto;">
 							<a href="/docs/go-enrichment-analysis/" style="color:white;">GO Enrichment Analysis <i class="fa fa-question-circle"></i></a>
 							</h5>
-			
+
 							<form action="http://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank">
 								<input name="correction" value="bonferroni" type="hidden">
 								<input name="format" value="html" type="hidden">
 								<input name="resource" value="PANTHER" type="hidden">
 								<textarea id="landing_gene_input" class="form-control" rows="5" name="input" placeholder="Your gene IDs here..." style="width:100%; resize: none; margin-bottom: 5px;"></textarea>
-			
+
 								<div class="form-group" style="width:100%;margin-bottom: 5px;">
 									<select id="rte_ontology" class="form-control" name="ontology" style="width:100%">
 										<option value="biological_process">biological process</option>
@@ -103,8 +103,8 @@ margin-top: -70px !important;
 										<option value="cellular_component">cellular component</option>
 									</select>
 								</div>
-			
-			
+
+
 								<div class="input-group">
 									<div class="form-group">
 										<select id="rte_species" class="form-control" name="species" style="width: 100%;">
@@ -214,13 +214,13 @@ margin-top: -70px !important;
 											<option value="YERPE">Yersinia pestis</option>
 										</select>
 									</div>
-			
+
 									<span class="input-group-btn">
 										<button type="submit" class="btn btn-primary u-no-transform">Submit</button>
 									</span>
 								</div>
 							</form>
-					</div>				
+					</div>
 				<!-- <div class="hidden-xs hidden-sm">
 					<img src="img/go-logo-icon.png" alt="Gene Ontology Logo" class="img-responsive go-main-logo" style="margin: auto;">
 				</div> -->
@@ -230,7 +230,7 @@ margin-top: -70px !important;
 				padding-top: 1px;
 				margin-top: 20px;
 				font-size: 16px;
-				color: black;				
+				color: black;
 				">
 
 					<!-- <h3 style="font-size: 25px;margin-bottom: 0px;">
@@ -270,7 +270,7 @@ margin-top: -70px !important;
 			<p>
 				The Gene Ontology (GO) resource is the world’s largest source of knowledge about the functions of genes. This knowledge is both human-readable and machine-readable, and is a foundation for computational analysis of large-scale molecular biology and genetics experiments in biomedical research.
 
-				The GO knowledgebase is composed of two primary components: 
+				The GO knowledgebase is composed of two primary components:
 				<li class="curvy-card u-background-gradient-secondary"> <a href="/docs/ontology-documentation/">GO ontology</a>, which provides the logical structure of the “universe” of biological functions (“terms”) and their relationships to one another. </li>
 				<li class="curvy-card u-background-gradient-tertiary" style="margin-left: 25px"> <a href="/docs/go-annotations/">GO annotations</a>, statements relating a specific gene to a function (GO term). Each annotation is based on specific scientific evidence.</li>
 			</p>
@@ -279,7 +279,7 @@ margin-top: -70px !important;
 
 	</div>
 
-	<!-- 
+	<!--
 	<div class="row">
 		<div class="col-sm-6">
 			<h1 class="text-center">
@@ -293,7 +293,7 @@ margin-top: -70px !important;
 			<p style="text-align: center;">
 				<a class="btn u-background-gradient-secondary btn-lg" href="/docs/downloads/"
 					role="button" style="font-size: 18px; margin: 5px">
-	 		    <i class="fa fa-share-alt"></i> Our ontology data »</a>		
+	 		    <i class="fa fa-share-alt"></i> Our ontology data »</a>
 			</p>
 		</div>
 		<div class="col-sm-6">
@@ -309,7 +309,7 @@ margin-top: -70px !important;
 				<a class="btn u-background-gradient-tertiary btn-lg" href="http://current.geneontology.org/products/pages/downloads.html" target="blank"
 					role="button" style="font-size: 18px; margin: 5px">
 			    <i class="fa fa-clone"></i> Our annotation data »</a>
-		
+
 
 			</p>
 		</div>
@@ -319,5 +319,3 @@ margin-top: -70px !important;
 	<br>
 	<br>
 	<hr>
-
-
