Changing tools & guide description

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ layout: default
 					<h4 class="card__heading">Annotations</h4>
 				</div>
 				<p class="card__description">
-					Statements, based on specific, traceble scientific evidence, asserting that a specific gene product is an real exemplar of
+					Statements, based on specific, traceable scientific evidence, asserting that a specific gene product is a real exemplar of
 					a particular GO class.
 				</p>
 				<div class="card__bottom">
@@ -315,8 +315,7 @@ layout: default
 					<h4 class="card__heading">Tools & Guides</h4>
 				</div>
 				<p class="card__description">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat nisi sint assumenda voluptas velit ipsa molestias doloremque
-					eius, laborum reprehenderit deserunt.
+					Tools to curate, browse, search, visualize and download both the ontology and annotations. Bioinformatic Guides (Notebooks) and simple API access to integrate GO into your research.
 				</p>
 
 				<div class="card__bottom" style="right: 30px;">
