--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ layout: default
 					Tools to curate, browse, search, visualize and download both the ontology and annotations. Bioinformatic Guides (Notebooks) and simple API access to integrate GO into your research.
 				</p>
 
-				<div class="card__bottom" style="right: 30px;">
+				<div class="card__bottom">
 						<div>
 					<a href="#" class="card__link">
 						<i class="fa fa-cog"></i> &nbsp; Browse Tools</a>
