--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ layout: default
 					</p>
 				</div>
 
-				<div class="col-md-4">
+				<div class="col-md-4" style="transform: translateY(-15px);">
 
 					<h3 class="display: block; margin-left: auto; margin-right: auto;" style="font-size: 24px; letter-spacing: 0.18rem; margin-top: 0px;">
 						<a href="/docs/go-enrichment-analysis/" style="color:white; font-size: 22px;">GO Enrichment Analysis
