Fixing header stats, fetching from 1 very small file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@ layout: default
 						transform: translate(50px, -25px);
 						/* background-color: white; */
 						/* text-shadow: 1px 1px black;*/">
-				Current release 2018-10-01: 45,042 GO terms | 6,278,639 annotations | 3,200 species</p>
+				Current release <span id="id_release_date" style="display: inline-block"></span>: 
+								<span id="id_terms" style="display: inline-block"></span> GO terms | 
+								<span id="id_annotations" style="display: inline-block"></span> annotations<br> 
+								<span id="id_geneproducts" style="display: inline-block"></span> gene products | 
+								<span id="id_species" style="display: inline-block"></span> species
+			</p>
 
 
 			<h1 class="site__title" style="
