--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@ layout: default
 						transform: translate(50px, -25px);
 						/* background-color: white; */
 						/* text-shadow: 1px 1px black;*/">
-				Current release <span id="id_release_date" style="display: inline-block"></span>: 
-								<span id="id_terms" style="display: inline-block"></span> GO terms | 
-								<span id="id_annotations" style="display: inline-block"></span> annotations<br> 
-								<span id="id_geneproducts" style="display: inline-block"></span> gene products | 
-								<span id="id_species" style="display: inline-block"></span> species
+				Current release <span id="id_release_date" class="header_stat"></span>: 
+								<span id="id_terms" class="header_stat"></span> GO terms | 
+								<span id="id_annotations" class="header_stat"></span> annotations<br> 
+								<span id="id_geneproducts" class="header_stat"></span> gene products | 
+								<span id="id_species" class="header_stat"></span> species
 			</p>
 
 
