--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ layout: default
 									 name="q" placeholder="Search GO term or Gene Product in AmiGO ..." title="Hint: add a space after completing a word to narrow the search."
 									 type="text">
 									<span class="input-group-btn">
-										<button class="btn btn-primary u-no-transform go-search-bar" type="submit" style="padding-left: 15px; padding-right: 15px; border-radius:0px 25px 25px 0px; height: 50px; background-color: #22612C; border-color: #22612C;">
+										<button class="btn btn-primary u-no-transform go-search-bar" type="submit" style="padding-left: 15px; padding-right: 15px; border-radius:0px 25px 25px 0px; height: 50px; background-color: #22612C; border-color: #22612C;" title="Search for GO terms or Gene Products">
 											<i class="fa fa-search"></i>
 										</button>
 									</span>
@@ -111,7 +111,7 @@ layout: default
 							<input name="correction" value="bonferroni" type="hidden">
 							<input name="format" value="html" type="hidden">
 							<input name="resource" value="PANTHER" type="hidden">
-							<textarea id="landing_gene_input" class="form-control" rows="6" name="input" placeholder="Your gene IDs here..." style="width:100%; resize: none; margin-bottom: 5px;"></textarea>
+							<textarea id="landing_gene_input" class="form-control" rows="6" name="input" placeholder="Your gene IDs here..." style="width:100%; resize: none; margin-bottom: 5px; font-size: 14px;"></textarea>
 
 							<div class="form-group" style="width:100%;margin-bottom: 5px;">
 								<select id="rte_ontology" class="form-control" name="ontology" style="width:100%">
@@ -233,9 +233,16 @@ layout: default
 								</div>
 
 								<span class="input-group-btn">
-									<button type="submit" class="btn btn-primary u-no-transform" style="background-color: #22612C; border-color: #22612C;">Submit</button>
+									<button type="button" class="btn btn-primary u-no-transform u-anim-zoom-in" style="background-color: #22612C; border-color: #22612C; margin-left: 4px;" onclick="setExample()" title="Cycle through different Gene Set examples">
+										Examples <i class="fa fa-bars u-line-height-single"></i>
+									</button>
+
+									<button type="submit" class="btn btn-primary u-no-transform u-anim-move-right" style="background-color: #22612C; border-color: #22612C; margin-left: 4px;" title="Launch GO Enrichment Analysis">
+										Launch <i class="fa fa-chevron-right u-line-height-single"></i>
+									</button>
 								</span>
 							</div>
+							<div id="input_hint" class="input_hint">Hint: can use Uniprot ID/AC, Gene Name, Gene Symbols, MOD IDs</div>
 						</form>
 				</div>
 				<!-- <div class="hidden-xs hidden-sm">
