Minor styling on search button

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ layout: default
 									 name="q" placeholder="Search GO term or Gene Product in AmiGO ..." title="Hint: add a space after completing a word to narrow the search."
 									 type="text">
 									<span class="input-group-btn">
-										<button class="btn btn-primary u-no-transform go-search-bar" type="submit" style="padding-left: 15px; padding-right: 15px; border-radius:0px 25px 25px 0px; height: 50px; background-color: #22612C; border-color: #22612C;" title="Search for GO terms or Gene Products">
+										<button class="btn btn-primary u-no-transform go-search-bar u-anim-zoom-in" type="submit" style="padding-left: 15px; padding-right: 15px; border-radius:0px 25px 25px 0px; height: 50px; background-color: #22612C; border-color: #22612C;" title="Search for GO terms or Gene Products">
 											<i class="fa fa-search"></i>
 										</button>
 									</span>
