Fix some of Val ticket 134

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ layout: default
 				</div>
 				<div>
 					<a href="/docs/tools-guide/" class="card__link">
-						<i class="fa fa-info"></i> &nbsp; Browse Guides</a>
+						<i class="fa fa-info"></i> &nbsp; Browse Tool Guides</a>
 				</div>
 			</div>
 			</div>
