Answering tickets 963 and 966

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ layout: default
 										<option value="ARATH">Arabidopsis thaliana</option>
 										<option value="ECOLI">Escherichia coli</option>
 										<option value="EMENI">Emericella nidulans</option>
+										<option value="AMBTC">Amborella trichopoda</option>
 										<option value="ANOCA">Anolis carolinensis</option>
 										<option value="ANOGA">Anopheles gambiae</option>
 										<option value="AQUAE">Aquifex aeolicus</option>
@@ -159,62 +160,82 @@ layout: default
 										<option value="BATDJ">Batrachochytrium dendrobatidis</option>
 										<option value="BOVIN">Bos taurus</option>
 										<option value="BRADI">Brachypodium distachyon</option>
-										<option value="BRAJA">Bradyrhizobium japonicum</option>
+										<option value="BRADU">Bradyrhizobium diazoefficiens</option>
 										<option value="BRAFL">Branchiostoma floridae</option>
+										<option value="BRARP">Brassica rapa subsp. pekinensis</option>
 										<option value="CAEBR">Caenorhabditis briggsae</option>
 										<option value="CANAL">Candida albicans</option>
-										<option value="CANFA">Canis familiaris</option>
+										<option value="CANLF">Canis lupus familiaris</option>
 										<option value="CHLTR">Chlamydia trachomatis</option>
 										<option value="CHLRE">Chlamydomonas reinhardtii</option>
 										<option value="CHLAA">Chloroflexus aurantiacus</option>
 										<option value="CIOIN">Ciona intestinalis</option>
+										<option value="CITSI">Citrus sinensis</option>
 										<option value="CLOBH">Clostridium botulinum</option>
 										<option value="COXBU">Coxiella burnetii</option>
 										<option value="CRYNJ">Cryptococcus neoformans</option>
+										<option value="CUCSA">Cucumis sativus</option>
 										<option value="DAPPU">Daphnia pulex</option>
 										<option value="DEIRA">Deinococcus radiodurans</option>
 										<option value="DICTD">Dictyoglomus turgidum</option>
 										<option value="DICPU">Dictyostelium purpureum</option>
 										<option value="ENTHI">Entamoeba histolytica</option>
 										<option value="HORSE">Equus caballus</option>
+										<option value="ERYGU">Erythranthe guttata</option>
 										<option value="FELCA">Felis catus</option>
 										<option value="FUSNN">Fusobacterium nucleatum</option>
 										<option value="GEOSL">Geobacter sulfurreducens</option>
 										<option value="GIAIC">Giardia intestinalis</option>
 										<option value="GLOVI">Gloeobacter violaceus</option>
 										<option value="SOYBN">Glycine max</option>
+										<option value="GORGO">Gorilla gorilla gorilla</option>
+										<option value="GOSHI">Gossypium hirsutum</option>
 										<option value="HAEIN">Haemophilus influenzae</option>
 										<option value="HALSA">Halobacterium salinarum</option>
+										<option value="HELAN">Helianthus annuus</option>
+										<option value="HELPY">Helicobacter pylori</option>
+										<option value="HORVV">Hordeum vulgare subsp. vulgare</option>
 										<option value="IXOSC">Ixodes scapularis</option>
 										<option value="KORCO">Korarchaeum cryptofilum</option>
 										<option value="LEIMA">Leishmania major</option>
 										<option value="LEPIN">Leptospira interrogans</option>
 										<option value="LISMO">Listeria monocytogenes</option>
 										<option value="MACMU">Macaca mulatta</option>
+										<option value="MEDTR">Medicago truncatula</option>
 										<option value="METJA">Methanocaldococcus jannaschii</option>
 										<option value="METAC">Methanosarcina acetivorans</option>
 										<option value="MONDO">Monodelphis domestica</option>
 										<option value="MONBE">Monosiga brevicollis</option>
+										<option value="MUSAM">Musa acuminata subsp. malaccensis</option>
 										<option value="MYCTU">Mycobacterium tuberculosis</option>
+										<option value="NEIMB">Neisseria meningitidis serogroup b</option>
 										<option value="NEMVE">Nematostella vectensis</option>
+										<option value="ASPFU">Neosartorya fumigata</option>
 										<option value="NEUCR">Neurospora crassa</option>
+										<option value="TOBAC">Nicotiana tabacum</option>
+										<option value="NITMS">Nitrosopumilus maritimus</option>
 										<option value="ORNAN">Ornithorhynchus anatinus</option>
 										<option value="ORYSJ">Oryza sativa</option>
+										<option value="ORYLA">Oryzias latipes</option>
+										<option value="OSTTA">Ostreococcus tauri</option>
 										<option value="PANTR">Pan troglodytes</option>
+										<option value="PARTE">Paramecium tetraurelia</option>
 										<option value="PHANO">Phaeosphaeria nodorum</option>
+										<option value="PHODC">Phoenix dactylifera</option>
 										<option value="PHYPA">Physcomitrella patens</option>
-										<option value="PHYIT">Phytophthora infestans</option>
+										<option value="PHYRM">Phytophthora ramorum</option>
 										<option value="PLAF7">Plasmodium falciparum</option>
 										<option value="POPTR">Populus trichocarpa</option>
 										<option value="PRIPA">Pristionchus pacificus</option>
+										<option value="PRUPE">Prunus persica</option>
 										<option value="PSEAE">Pseudomonas aeruginosa</option>
 										<option value="PUCGT">Puccinia graminis</option>
 										<option value="PYRAE">Pyrobaculum aerophilum</option>
-										<option value="PYRKO">Pyrococcus kodakaraensis</option>
 										<option value="RHOBA">Rhodopirellula baltica</option>
+										<option value="RICCO">Ricinus communis</option>
 										<option value="SALTY">Salmonella typhimurium</option>
-										<option value="SCHMA">Schistosoma mansoni</option>
 										<option value="SCLS1">Sclerotinia sclerotiorum</option>
+										<option value="SETIT">Setaria italica</option>
 										<option value="SHEON">Shewanella oneidensis</option>
 										<option value="SOLLC">Solanum lycopersicum</option>
 										<option value="SORBI">Sorghum bicolor</option>
@@ -225,14 +246,16 @@ layout: default
 										<option value="SULSO">Sulfolobus solfataricus</option>
 										<option value="PIG">Sus scrofa</option>
 										<option value="SYNY3">Synechocystis</option>
-										<option value="TAKRU">Takifugu rubripes</option>
-										<option value="TETTS">Tetrahymena thermophila</option>
 										<option value="THAPS">Thalassiosira pseudonana</option>
+										<option value="THECC">Theobroma cacao</option>
+										<option value="THEKO">Thermococcus kodakaraensis</option>
 										<option value="THEYD">Thermodesulfovibrio yellowstonii</option>
 										<option value="THEMA">Thermotoga maritima</option>
+										<option value="TRICA">Tribolium castaneum</option>
 										<option value="TRIVA">Trichomonas vaginalis</option>
 										<option value="TRIAD">Trichoplax adhaerens</option>
-										<option value="brucei">TRYB2 Trypanosoma brucei</option>
+										<option value="WHEAT">Triticum aestivum</option>
+										<option value="TRYB2">Trypanosoma brucei</option>
 										<option value="USTMA">Ustilago maydis</option>
 										<option value="VIBCH">Vibrio cholerae</option>
 										<option value="VITVI">Vitis vinifera</option>
@@ -240,6 +263,10 @@ layout: default
 										<option value="XENTR">Xenopus tropicalis</option>
 										<option value="YARLI">Yarrowia lipolytica</option>
 										<option value="YERPE">Yersinia pestis</option>
+										<option value="MAIZE">Zea mays</option>
+										<option value="HELRO">helobdella robusta</option>
+										<option value="LEPOC">lepisosteus oculatus</option>
+										<option value="MYCGE">mycoplasma genitalium</option>
 									</select>
 								</div>
 
