--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ layout: default
 
 								<span class="input-group-btn">
 									<button type="button" class="btn btn-primary u-no-transform u-anim-zoom-in" style="background-color: #22612C; border-color: #22612C; margin-left: 4px;" onclick="setExample()" title="Cycle through different Gene Set examples">
-										Examples <i class="fa fa-list u-line-height-single"></i>
+										Examples
 									</button>
 
 									<button type="submit" class="btn btn-primary u-no-transform u-anim-move-right" style="background-color: #22612C; border-color: #22612C; margin-left: 4px;" title="Launch GO Enrichment Analysis">
