--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ layout: default
 									</button>
 								</span>
 							</div>
-							<div id="input_hint" class="input_hint">Hint: can use Uniprot ID/AC, Gene Name, Gene Symbols, MOD IDs</div>
+							<div id="input_hint" class="input_hint">Hint: can use UniProt ID/AC, Gene Name, Gene Symbols, MOD IDs</div>
 						</form>
 				</div>
 				<!-- <div class="hidden-xs hidden-sm">
