--- a/index.html
+++ b/index.html
@@ -112,11 +112,15 @@ layout: default
 
 				<div class="col-md-4" style="transform: translateY(-15px);">
 
-					<h3 class="display: block; margin-left: auto; margin-right: auto;" style="font-size: 24px; letter-spacing: 0.18rem; margin-top: 0px;">
+					<h3 style="display: block; margin-left: auto; margin-right: auto; font-size: 24px; letter-spacing: 0.18rem; margin-top: 0px; margin-bottom: 0px; ">
 						<a href="/docs/go-enrichment-analysis/" style="color:white; font-size: 22px;">GO Enrichment Analysis
 							<i class="fa fa-question-circle"></i>
 						</a>
-						</h5>
+					</h3>
+					<i style="	
+								width: 100%;
+								display: block;
+								font-size: 14px;">Powered by <a href="http://pantherdb.org" style="color: white" target="blank">PANTHER</a></i>
 
 						<form action="http://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank">
 							<input name="correction" value="bonferroni" type="hidden">
