--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ layout: default
 								font-size: 14px;">Powered by <a href="http://pantherdb.org" style="color: white" target="blank">PANTHER</a></i>
 
 						<form action="http://pantherdb.org/webservices/go/overrep.jsp" class="form-inline" role="form" method="POST" target="_blank">
-							<input name="correction" value="bonferroni" type="hidden">
+							<input name="correction" value="fdr" type="hidden">
 							<input name="format" value="html" type="hidden">
 							<input name="resource" value="PANTHER" type="hidden">
 							<textarea id="landing_gene_input" class="form-control" rows="6" name="input" placeholder="Your gene IDs here..." style="width:100%; resize: none; margin-bottom: 5px; font-size: 14px;"></textarea>
