--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ layout: default
 					</div>
 					<div>
 						<a href="http://amigo.geneontology.org/amigo/dd_browse" class="card__link" target="blank">
-							<i class="fa fa-clone"></i> &nbsp; Browse</a>
+							<i class="fa fa-clone"></i> &nbsp; Browse in AmiGO</a>
 					</div>
 					<div>
 						<a href="/docs/download-ontology/" class="card__link">
@@ -362,7 +362,7 @@ layout: default
 					</div>
 					<div>
 						<a href="http://amigo.geneontology.org/amigo/search/annotation" class="card__link" target="blank">
-							<i class="fa fa-clone"></i> &nbsp; Browse</a>
+							<i class="fa fa-clone"></i> &nbsp; View in AmiGO</a>
 					</div>
 					<div>
 						<a href="/docs/download-go-annotations/" class="card__link" target="blank">
