--- a/index.html
+++ b/index.html
@@ -383,12 +383,12 @@ layout: default
 
 				<div class="card__bottom">
 					<div>
-						<a href="/docs/tools-guide/" class="card__link">
-							<i class="fa fa-info"></i> &nbsp; GO Programmatic Access</a>
+						<a href="/docs/tools-overview/" class="card__link">
+							<i class="fa fa-info"></i> &nbsp; GO Tools Overview</a>
 					</div>
 					<div>
-						<a href="/docs/tools-overview/" class="card__link">
-							<i class="fa fa-clone"></i> &nbsp; Browse</a>
+						<a href="/docs/tools-guide/" class="card__link">
+							<i class="fa fa-clone"></i> &nbsp; GO APIs Guide</a>
 					</div>
 					<div>
 						<a href="https://github.com/geneontology/" class="card__link" target="blank">
