--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ layout: default
 
 		<div class="card col-md-4">
 			<div class="card__container" style="background-color: rgba(135, 174, 180, 0.3);">
-				<div onclick="location.href = '/docs/tools-guide/'" class="card__picture card__picture__dna--green">
+				<div onclick="location.href = '/docs/tools-overview/'" class="card__picture card__picture__dna--green">
 					<h4 class="card__heading"><i class="fa fa-cog"></i> Tools & Guides</h4>
 				</div>
 				<p class="card__description">
