Site statement layout

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ layout: default
 
 				<div class="col-md-8">
 
-					<p class="site__statement" style="font-size: 16px; max-width: 900px; margin-bottom: 0px;">
+					<p class="site__statement" style="font-size: 16px; max-width: 820px; margin-bottom: 0px; text-align: justify;">
 						The mission of the GO Consortium is to develop a comprehensive,
 						<b>computational model of biological systems</b>, ranging from the molecular to the organism level, across the multiplicity
 						of species in the tree of life.
@@ -88,7 +88,7 @@ layout: default
 
 					<p>
 						<form action="http://amigo.geneontology.org/amigo/medial_search" class="" method="GET" name="form-search" target="_blank"
-						 style="max-width: 800px;">
+						 style="max-width: 810px;">
 							<div class="center-block" style="padding-bottom: 1em;">
 								<div class="input-group">
 									<input id="gsf-query" class="form-control input-lg go-search-bar" style="width: 100%; border-radius:25px 0px 0px 25px;height: 50px; font-size: 16px;"
