Slight css fix + Download -> repository

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ layout: default
 
 		<div class="card col-md-3">
 			<div class="card__container" style="background-color: rgba(135, 174, 180, 0.3);">
-				<div onclick="location.href = '/docs/tools-overview/'" class="card__picture card__picture__gocam">
+				<div onclick="location.href = '/docs/gocam-overview/'" class="card__picture card__picture__gocam">
 					<h4 class="card__heading"><i class="fa fa-cog"></i> GO-CAM</h4>
 				</div>
 				<p class="card__description">
@@ -399,7 +399,7 @@ layout: default
 					</div>
 					<div>
 						<a href="https://github.com/geneontology/noctua-models" class="card__link" target="blank">
-							<i class="fa fa-download"></i> &nbsp; Download</a>
+							<i class="fa fa-github"></i> &nbsp; Repository</a>
 					</div>
 				</div>
 			</div>
